--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@opencode-ai/plugin": ">=0.13.7"
+    "@opencode-ai/plugin": "^1.0.216"
   },
   "dependencies": {
     "@opencode-ai/sdk": "latest",
     "yaml": "^2.8.2"
   },
   "devDependencies": {
-    "@opencode-ai/plugin": "^1.0.143",
-    "@types/node": "^24.10.1",
-    "bun-types": "^1.3.4",
+    "@opencode-ai/plugin": "^1.0.216",
+    "@types/node": "^25.0.3",
+    "bun-types": "^1.3.5",
     "typescript": "^5.9.3"
   },
   "files": [
